feat(persistence): implementa paginacao no adaptador de banco de dados